fix: 🐛 display issue on mobile

--- a/src/components/PhotoDisplay/PhotoDisplay.css
+++ b/src/components/PhotoDisplay/PhotoDisplay.css
@@ -4,7 +4,7 @@
 
 .photo-display > img {
     width: 100%;
-    height: 25vh;
+    height: 280px;
     object-fit: cover;
     border-radius: .5rem;
     box-shadow: 0 4px 10px rgb(0 0 0 / 0.7);
